# mnist

./: .gitignore  .pyproject.toml.swp  Dockerfile  ml-work-cronjob  model.ipynb  pyproject.toml  run.sh
note/: mnist984.keras  model.ipynb  model2.ipynb
src/mnist/: db.py  main.py  model.py  test.py  worker.py
src/mnist/model/: manager.py
tests/: test_worker.py
