[project]
name = "mnist"
version = "0.3.0"
description = "MNIST database"
authors = [
    {name = "Nicou11", email = "lyoungin1204@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "python-multipart>=0.0.9",
    "pymysql>=1.1.1",
    "pytz>=2024.2",
    "jigutime>=0.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pdm]
distribution = true

[project.scripts]
ml-worker = "mnist.worker:run"
